--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^2.3.1",
     "css-select": "^5.1.0",
     "deep-object-diff": "^1.1.9",
     "dotenv": "^16.3.1",
-    "htmlparser2": "^9.0.0"
+    "htmlparser2": "^9.0.0",
+    "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
+    "@types/cron": "^2.0.1",
     "@types/node-fetch": "^2.6.4",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
