--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console-stamp": "^3.1.1",
     "cron": "^2.3.1",
     "css-select": "^5.1.0",
     "dotenv": "^16.3.1",
