--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -1,8 +1,10 @@
 name: Create and publish a Docker image
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+  push:
+    tags:
+      - "**"
 
 env:
   REGISTRY: ghcr.io
