--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 services:
   app:
     build: .
     env_file:
-      - '.env'
+      - ".env"
     volumes:
       - ./src:/usr/src/app/src
